@@ -4,6 +4,6 @@
   },
   "MONITORING": {
     "QUERIES_PER_SECOND": "Consultas Por Segundo",
-    "QUERY_SPEED": "Velocidad De Consulta"
+    "QUERY_SPEED": "Velocidad De Consulta (ms)"
   }
 }
